--- a/styles/temples.css
+++ b/styles/temples.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
 }
 
+
 header {
     background-color: #2c2c2c; 
     color: #fff;
@@ -32,12 +33,12 @@ header {
 }
 
 nav {
-    display: none;
+    display: none; 
     flex-direction: column;
     position: absolute; 
-    top: 55px;
+    top: 55px; 
     right: 0;
-    background-color: #000;
+    background-color: #000; 
     width: 100%;
     text-align: center;
     z-index: 10;
@@ -78,6 +79,7 @@ main h1 {
     padding-bottom: 20px;
 }
 
+/* --- CSS GRID: MOBILE FIRST (Default: 1 Column) --- */
 .figure-grid {
     display: grid;
     /* 1 column by default (for screens less than 600px) */
@@ -107,6 +109,15 @@ figcaption {
     color: #666;
 }
 
+/* --- MEDIA QUERY 1: Tablet View (600px and up) --- */
+@media (min-width: 600px) {
+    /* Change image grid to 2 columns */
+    .figure-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
 footer {
     background-color: #2c2c2c;
     color: #ccc;
@@ -117,40 +128,4 @@ footer {
 
 footer p {
     margin: 5px 0;
-}
-
-/* --- Tablet View (600px and up) --- */
-@media (min-width: 600px) {
-    /* Change image grid to 2 columns */
-    .figure-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-
-/* ---  Desktop View (992px and up) --- */
-@media (min-width: 992px) {
-    
-    .hamburger-menu {
-        display: none; /* Hide button on large screens */
-    }
-    
-    nav {
-        display: flex; /* Show nav links horizontally */
-        flex-direction: row;
-        position: static;
-        width: auto;
-        padding: 0;
-        background-color: transparent;
-        box-shadow: none;
-    }
-    nav a {
-        border-top: none;
-        background-color: #000;
-    }
-    
-    /* Change image grid to 3 columns on desktop screens */
-    .figure-grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
 }
