--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,6 +1,6 @@
-
+/* --- NAVIGATION OVERRIDE --- */
 .hamburger-menu {
-    display: none; /* Hide hamburger button on large screens */
+    display: none; /* Desktop: hide hamburger button */
 }
 
 nav {
@@ -8,16 +8,20 @@ nav {
     flex-direction: row;
     position: static;
     width: auto;
-    padding: 0;
     background-color: transparent;
     box-shadow: none;
 }
 
 nav a {
-    border-top: none;
-    background-color: #000;
+    border-top: none; /* Remove mobile border */
+    background-color: transparent;
 }
 
+nav a:hover {
+    background-color: #555;
+}
+
+/* --- CSS GRID OVERRIDE --- */
 .figure-grid {
     /* Change image grid to 3 columns on desktop screens */
     grid-template-columns: repeat(3, 1fr);
