--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -5,24 +5,21 @@
 
 nav {
     display: flex; 
-    flex-direction: row;
-    position: static;
-    width: auto;
-    background-color: transparent;
+    flex-direction: row;     
+    position: static;      
+    width: auto;              
+    background-color: transparent; 
     box-shadow: none;
 }
 
 nav a {
     border-top: none; /* Remove mobile border */
-    background-color: transparent;
-}
-
-nav a:hover {
-    background-color: #555;
+    /* Set background-color to transparent to show the header's background */
+    background-color: transparent; 
 }
 
 /* --- CSS GRID OVERRIDE --- */
 .figure-grid {
-    /* Change image grid to 3 columns on desktop screens */
+    /* Change image grid to 3 columns on desktop screens (fixes grid-template-columns conflict) */
     grid-template-columns: repeat(3, 1fr);
 }
