--- a/styles/place.css
+++ b/styles/place.css
@@ -1,4 +1,4 @@
-/* Global CSS Variables (REQUIRED) */
+/* Global CSS Variables */
 :root {
   --primary-color: rgb(0,104,71); /* Deep Green, Mexico flag color */
   --secondary-color: rgb(115,69,45); /* Brown/Earth Tone for accents */
