--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -168,8 +168,9 @@ nav a.active {
     border: 1px solid var(--color-primary);
 }
 
-.hero-text h1, .hero-text h2 {
+.hero-text h1, .hero-text h2, .hero-text p {
     margin: 0;
+    text-align: center;
 }
 .date-location {
     font-style: italic;
@@ -259,7 +260,7 @@ label {
 }
 
 input[type="text"], input[type="number"], select, textarea {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -285,7 +286,7 @@ textarea {
   DETAILS.HTML (VENUE & LOGISTICS)
 ==================================*/
 
-.venue-location, .accommodations {
+.plan-container {
     background-color: #ffffff;
     padding: 25px;
     border-radius: 8px;
